--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,13 +7,18 @@ spring.messages.basename=i18n.login
 spring.thymeleaf.cache=false
 
 #jdbc驱动
-spring.datasource.url=jdbc:mysql://localhost:3306/crowd?serverTimezone=GMT%2B8&useUnicode=true&characterEncoding=utf8
+#本地地址
+#spring.datasource.url=jdbc:mysql://localhost:3306/crowd?serverTimezone=GMT%2B8&useUnicode=true&characterEncoding=utf8
+#spring.datasource.username=root
+#spring.datasource.password=
+
+#116.62.22.62地址
+spring.datasource.url=jdbc:mysql://116.62.22.62:3306/crowd?serverTimezone=GMT%2B8&useUnicode=true&characterEncoding=utf8
 spring.datasource.username=root
-spring.datasource.password=
+spring.datasource.password=12345678
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 spring.jpa.properties.hibernate.hbm2ddl.auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
 spring.jpa.show-sql= true
-
 
